syntax = "proto3";

package yandex.cloud.priv.loadtesting.v1.moverload;

option go_package = "github.com/ydb-platform/ydb/ydb/public/api/client/yc_private/loadtesting/moverload;moverload";
option java_outer_classname = "LtV1MoverloadStatus";

enum Status {
  STATUS_UNSPECIFIED = 0;
  CREATED = 1;
  IN_PROGRESS = 2;
  COMPLETED = 3;
  FAILED = 4;
}
